[metadata]
name = unitconvert
version = 0.1.0
description = A simple Python package for unit conversions (temperature, length, weight).
author = Your Name
author_email = your@email.com
license = MIT
license_files = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/unitconvert
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
install_requires = 
    pytest  
python_requires = >=3.6

[options.packages.find]
where = src

[options.extras_require]
dev =
    setuptools
    wheel
    pytest
    build
    twine

[entry_points]
console_scripts =
    'unitconvert = unitconvert.cli:main' 
